--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/webdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/webdb?serverTimezone=Asia/Seoul
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=webuser
 spring.datasource.password=webuser
