--- a/build.gradle
+++ b/build.gradle
@@ -66,4 +66,8 @@ sourceSets {
     }
 }
 
+// task deleteBuild(type: Delete) (
+// 	delete = "$projectDir/btn/generated-sources/annotations/"
+// )
+
 compileJava.dependsOn('clean')
